Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34509

UBSAN: call to function option_cmp(my_option*, my_option*) through pointer to incorrect function type

    XMLWordPrintable

Details

    Description

      /source/mysys/mf_qsort.c:148:7: runtime error: call to function option_cmp(my_option*, my_option*) through pointer to incorrect function type 'int (*)(const void *, const void *)'
      /source/sql/mysqld.cc:7651: note: option_cmp(my_option*, my_option*) defined here
      SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior /source/mysys/mf_qsort.c:148:7 
      

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.