MDEV-34509: UBSAN: call to function option_cmp(my_option*, my_option*) through pointer to incorrect function type

Clang-18 was detecting these calls as undefined behaviour.

Comparison functions to conform to the specification require constant
arguments.

Make this the same for filesort too.